publish: Split out campus and campus status entities
generated from commit e61c6781386b1c054e8b464da2ae525e38c73366

--- a/index.html
+++ b/index.html
@@ -240,6 +240,9 @@
                     <a href="#campuses" class="toc-h2 toc-link" data-title="Campuses">Campuses</a>
                   </li>
                   <li>
+                    <a href="#campus-statuses" class="toc-h2 toc-link" data-title="Campus statuses">Campus statuses</a>
+                  </li>
+                  <li>
                     <a href="#subjects" class="toc-h2 toc-link" data-title="Subjects">Subjects</a>
                   </li>
                   <li>
@@ -412,10 +415,10 @@ https://manage-courses-support.herokuapp.com/courses?page=3
 <td></td>
 </tr>
 <tr>
-<td>campuses</td>
-<td>An array of campuses</td>
+<td>campus_statuses</td>
+<td>An array of campus statuses</td>
 <td></td>
-<td>See the campus entity documentation below</td>
+<td>See the campus status entity documentation below</td>
 </tr>
 <tr>
 <td>subjects</td>
@@ -456,7 +459,7 @@ https://manage-courses-support.herokuapp.com/courses?page=3
     </span><span class="s2">"maths"</span><span class="p">:</span><span class="w"> </span><span class="mi">3</span><span class="p">,</span><span class="w">
     </span><span class="s2">"science"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
     </span><span class="s2">"has_been_published"</span><span class="p">:</span><span class="w"> </span><span class="kc">true</span><span class="p">,</span><span class="w">
-    </span><span class="s2">"campuses"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="w">
+    </span><span class="s2">"campus_statuses"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="w">
       </span><span class="p">{</span><span class="w">
         </span><span class="s2">"campus_code"</span><span class="p">:</span><span class="w"> </span><span class="s2">"-"</span><span class="p">,</span><span class="w">
         </span><span class="s2">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Main Site"</span><span class="p">,</span><span class="w">
@@ -499,7 +502,9 @@ https://manage-courses-support.herokuapp.com/courses?page=3
 <p><code>GET https://manage-courses-support.herokuapp.com/courses</code></p>
 <h2 id='campuses'>Campuses</h2><h3 id='entity-documentation-2'>Entity documentation</h3>
 <p>TODO</p>
-<h2 id='subjects'>Subjects</h2><h3 id='entity-documentation-3'>Entity documentation</h3>
+<h2 id='campus-statuses'>Campus statuses</h2><h3 id='entity-documentation-3'>Entity documentation</h3>
+<p>TODO</p>
+<h2 id='subjects'>Subjects</h2><h3 id='entity-documentation-4'>Entity documentation</h3>
 <table><thead>
 <tr>
 <th>Parameter</th>
@@ -538,7 +543,7 @@ https://manage-courses-support.herokuapp.com/courses?page=3
 </span><span class="p">]</span><span class="w">
 </span></code></pre>
 <p>This endpoint retrieves all subjects.</p>
-<h2 id='providers'>Providers</h2><h3 id='entity-documentation-4'>Entity documentation</h3>
+<h2 id='providers'>Providers</h2><h3 id='entity-documentation-5'>Entity documentation</h3>
 <table><thead>
 <tr>
 <th>Parameter</th>
