publish: Add placeholder entity docs for campuses and campus statuses
generated from commit 1d5c47cc7b04282e764dff52bef9a929de034e59

--- a/index.html
+++ b/index.html
@@ -501,9 +501,73 @@ https://manage-courses-support.herokuapp.com/courses?page=3
 <h4 id='http-request'>HTTP Request</h4>
 <p><code>GET https://manage-courses-support.herokuapp.com/courses</code></p>
 <h2 id='campuses'>Campuses</h2><h3 id='entity-documentation-2'>Entity documentation</h3>
-<p>TODO</p>
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Data type</th>
+<th>Possible values</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>campus_code</td>
+<td>Text</td>
+<td>A-Z, 0-9, &quot;-&quot;, &quot;&quot;</td>
+<td>1-character campus codes</td>
+</tr>
+<tr>
+<td>name</td>
+<td>Text</td>
+<td></td>
+<td></td>
+</tr>
+</tbody></table>
 <h2 id='campus-statuses'>Campus statuses</h2><h3 id='entity-documentation-3'>Entity documentation</h3>
-<p>TODO</p>
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Data type</th>
+<th>Possible values</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>campus_code</td>
+<td>Text</td>
+<td>A-Z, 0-9, &quot;-&quot;, &quot;&quot;</td>
+<td>1-character campus codes</td>
+</tr>
+<tr>
+<td>name</td>
+<td>Text</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>vac_status</td>
+<td>Text</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>publish</td>
+<td>Text</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>status</td>
+<td>Text</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>course_open_date</td>
+<td>ISO 8601 date/time string</td>
+<td></td>
+<td></td>
+</tr>
+</tbody></table>
 <h2 id='subjects'>Subjects</h2><h3 id='entity-documentation-4'>Entity documentation</h3>
 <table><thead>
 <tr>
