publish: Fix course entity docs
generated from commit bc0acf7dee2df57e7455915ddafd8d1df0de093d

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ https://manage-courses-support.herokuapp.com/api/v1/courses?page=3
 <tr>
 <td>provider</td>
 <td>Provider</td>
-<td>null or a provider entity</td>
+<td>A provider entity</td>
 <td>See the provider entity documentation below</td>
 </tr>
 <tr>
