--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@ curl <span class="s2">"api_endpoint_here"</span>
 <blockquote>
 <p>Example page URLs:</p>
 </blockquote>
-<pre class="highlight plaintext"><code>https://manage-courses-support.herokuapp.com/api/v1/courses
-https://manage-courses-support.herokuapp.com/api/v1/courses?page=1
-https://manage-courses-support.herokuapp.com/api/v1/courses?page=2
-https://manage-courses-support.herokuapp.com/api/v1/courses?page=3
+<pre class="highlight plaintext"><code>https://manage-courses-backend.herokuapp.com/api/v1/courses
+https://manage-courses-backend.herokuapp.com/api/v1/courses?page=1
+https://manage-courses-backend.herokuapp.com/api/v1/courses?page=2
+https://manage-courses-backend.herokuapp.com/api/v1/courses?page=3
 </code></pre>
 <p>The API responses contain meta-information in the <code>Link</code>, <code>Per-Page</code> and <code>Total</code> headers:</p>
 
@@ -296,7 +296,7 @@ https://manage-courses-support.herokuapp.com/api/v1/courses?page=3
 <tr>
 <td>Link</td>
 <td>Links to the next and last pages</td>
-<td><code>Link: &lt;https://manage-courses-support.herokuapp.com/api/v1/courses?page=169&gt;; rel=&quot;last&quot;, &lt;https://manage-courses-support.herokuapp.com/api/v1/courses?page=2&gt;; rel=&quot;next&quot;</code></td>
+<td><code>Link: &lt;https://manage-courses-backend.herokuapp.com/api/v1/courses?page=169&gt;; rel=&quot;last&quot;, &lt;https://manage-courses-backend.herokuapp.com/api/v1/courses?page=2&gt;; rel=&quot;next&quot;</code></td>
 </tr>
 <tr>
 <td>Per-Page</td>
@@ -451,7 +451,7 @@ https://manage-courses-support.herokuapp.com/api/v1/courses?page=3
 <td>Age of students targeted by this course.</td>
 </tr>
 </tbody></table>
-<h3 id='get-all-courses'>Get all courses</h3><pre class="highlight shell tab-shell"><code>curl <span class="s2">"https://manage-courses-support.herokuapp.com/api/v1/courses"</span>
+<h3 id='get-all-courses'>Get all courses</h3><pre class="highlight shell tab-shell"><code>curl <span class="s2">"https://manage-courses-backend.herokuapp.com/api/v1/courses"</span>
   -H <span class="s2">"Authorization: Bearer your_api_key"</span>
 </code></pre>
 <blockquote>
@@ -499,7 +499,12 @@ https://manage-courses-support.herokuapp.com/api/v1/courses?page=3
       </span><span class="s2">"institution_code"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2G9"</span><span class="p">,</span><span class="w">
       </span><span class="s2">"institution_name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Outwood Institute of Education North"</span><span class="p">,</span><span class="w">
       </span><span class="s2">"institution_type"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Y"</span><span class="p">,</span><span class="w">
-      </span><span class="s2">"accrediting_provider"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Y"</span><span class="w">
+      </span><span class="s2">"accrediting_provider"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Y"</span><span class="p">,</span><span class="w">
+      </span><span class="s2">"address1"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Sydney Russell School"</span><span class="p">,</span><span class="w">
+      </span><span class="s2">"address2"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Parsloes Avenue"</span><span class="p">,</span><span class="w">
+      </span><span class="s2">"address3"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Dagenham"</span><span class="p">,</span><span class="w">
+      </span><span class="s2">"address4"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Essex"</span><span class="p">,</span><span class="w">
+      </span><span class="s2">"postcode"</span><span class="p">:</span><span class="w"> </span><span class="s2">"RM9 5QT"</span><span class="w">
     </span><span class="p">},</span><span class="w">
     </span><span class="s2">"accrediting_provider"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
       </span><span class="s2">"institution_code"</span><span class="p">:</span><span class="w"> </span><span class="s2">"D86"</span><span class="p">,</span><span class="w">
@@ -515,7 +520,7 @@ https://manage-courses-support.herokuapp.com/api/v1/courses?page=3
 </span></code></pre>
 <p>This endpoint retrieves all courses.</p>
 <h4 id='http-request'>HTTP Request</h4>
-<p><code>GET https://manage-courses-support.herokuapp.com/api/v1/courses</code></p>
+<p><code>GET https://manage-courses-backend.herokuapp.com/api/v1/courses</code></p>
 <h2 id='campuses'>Campuses</h2><h3 id='entity-documentation-2'>Entity documentation</h3>
 <table><thead>
 <tr>
@@ -606,7 +611,7 @@ https://manage-courses-support.herokuapp.com/api/v1/courses?page=3
 <td></td>
 </tr>
 </tbody></table>
-<h3 id='get-all-providers'>Get all providers</h3><pre class="highlight shell tab-shell"><code>curl <span class="s2">"https://manage-courses-support.herokuapp.com/api/v1/subjects"</span>
+<h3 id='get-all-providers'>Get all providers</h3><pre class="highlight shell tab-shell"><code>curl <span class="s2">"https://manage-courses-backend.herokuapp.com/api/v1/subjects"</span>
   -H <span class="s2">"Authorization: Bearer your_api_key"</span>
 </code></pre>
 <blockquote>
@@ -662,8 +667,38 @@ https://manage-courses-support.herokuapp.com/api/v1/courses?page=3
 <td></td>
 <td>See the campus entity documentation above</td>
 </tr>
+<tr>
+<td>address1</td>
+<td>Text</td>
+<td></td>
+<td>Address line 1</td>
+</tr>
+<tr>
+<td>address2</td>
+<td>Text</td>
+<td></td>
+<td>Address line 2</td>
+</tr>
+<tr>
+<td>address3</td>
+<td>Text</td>
+<td></td>
+<td>Town/City</td>
+</tr>
+<tr>
+<td>address4</td>
+<td>Text</td>
+<td></td>
+<td>County</td>
+</tr>
+<tr>
+<td>postcode</td>
+<td>Text</td>
+<td></td>
+<td>Postcode</td>
+</tr>
 </tbody></table>
-<h3 id='get-all-providers-2'>Get all providers</h3><pre class="highlight shell tab-shell"><code>curl <span class="s2">"https://manage-courses-support.herokuapp.com/api/v1/providers"</span>
+<h3 id='get-all-providers-2'>Get all providers</h3><pre class="highlight shell tab-shell"><code>curl <span class="s2">"https://manage-courses-backend.herokuapp.com/api/v1/providers"</span>
   -H <span class="s2">"Authorization: Bearer your_api_key"</span>
 </code></pre>
 <blockquote>
@@ -675,6 +710,11 @@ https://manage-courses-support.herokuapp.com/api/v1/courses?page=3
     </span><span class="s2">"institution_name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"University of Plymouth"</span><span class="p">,</span><span class="w">
     </span><span class="s2">"institution_type"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Y"</span><span class="p">,</span><span class="w">
     </span><span class="s2">"accrediting_provider"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Y"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"address1"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Sydney Russell School"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"address2"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Parsloes Avenue"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"address3"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Dagenham"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"address4"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Essex"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"postcode"</span><span class="p">:</span><span class="w"> </span><span class="s2">"RM9 5QT"</span><span class="p">,</span><span class="w">
     </span><span class="s2">"campuses"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="w">
       </span><span class="p">{</span><span class="w">
         </span><span class="s2">"campus_code"</span><span class="p">:</span><span class="w"> </span><span class="s2">""</span><span class="p">,</span><span class="w">
